# cpp-project

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  README.md
src/: gamestate.cpp  main.cpp
